Purchase Tickets settings alignment fixes

--- a/app/style/PurchaseTickets.less
+++ b/app/style/PurchaseTickets.less
@@ -1,5 +1,6 @@
 @import (reference) "./main.less";
 @import (reference) "./Icons.less";
+@import (reference) "./MiscComponents.less";
 
 .purchase-ticket-area {
   width: 740px;
@@ -32,6 +33,11 @@
 .purchase-ticket-area-row-label {
   font-size: 19px;
   color: var(--input-color-default);
+
+  &:nth-of-type(1n){
+    width: 82px;
+    text-align: right;
+  }    
 }
 
 .stakepool-purchase-ticket-buttons-area {
@@ -70,10 +76,23 @@
   padding: 14px 0 14px 18px;
   height: 56px;
   display: grid;
-  grid-template-columns: 280px 130px 123px auto;
+  grid-template-columns: 252px 130px 123px auto;
   align-items: center;
 
   .tooltipContainer {
+    height: 25px;
+    &.ticket_fee {
+      grid-column-start: 2;
+      grid-row-start: 1;
+    }
+    &.ticket_tx_fee {
+      grid-column-start: 3;
+      grid-row-start: 1;
+    }    
+    &.ticket_expiry {
+      grid-column-start: 4;
+      grid-row-start: 1;
+    }        
     &.ticket_pool_address {
       grid-column-start: 2;
     }
@@ -82,15 +101,6 @@
       grid-column-start: 4;
     }  
   }
-}
-
-.purchase-ticket-advanced-labels {
-  margin-right: 10px;
-  text-align: right;
-}
-
-.purchase-ticket-advanced-info-area {
-  padding: 30px 0 0 20px;
 }
 
 .stakepool-purchase-ticket-title-info-icon {
@@ -102,7 +112,7 @@
 }
 
 .purchase-ticket-area-row {
-  padding: 29px 0 0 40px;
+  padding: 29px 0 0 20px;
   height: 56px;
   border-bottom: 1px var(--disabled-background-color) solid;
   background-color: var(--background-back-color);
@@ -123,28 +133,26 @@
 .stakepool-purchase-ticket-input-select {
   font-size: 16px;
   text-align: left;
-  width: 300px;
-  margin-right: 100px;
-}
-
-.stakepool-purchase-ticket-label {
-  white-space: nowrap;
-  margin-bottom: 25px;
-  height: 20px;
+  width: 295px;
+  margin-right: 6px;
+  margin-left: 6px;  
+  margin-top:3px;
 }
 
 .stakepool-purchase-ticket-input {
-  margin-bottom: 20px;
   height: 20px;
 }
 
 .advanced-small-input {
-  width: 100px;
+  width: 95px;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
 .stakepool-advanced-big-input {
   width: 295px;
-  margin-right: 10px;
+  margin-right: 6px;
+  margin-left: 6px;
 }
 
 .stakepool-content-import-script-button {
@@ -301,6 +309,13 @@
   &.stakepool-pool-fee-icon {
     background-image: var(--pool-fee-icon);
   }  
+  
+  &.account-select-icon {
+    background-image: var(--wallet-gray-icon);
+    width: 22px;
+    background-position: 2px 5px;
+    background-size: 22px;
+  } 
 }
 
 .purchase-ticket-action-buttons {
@@ -338,8 +353,90 @@
   }
 }
 
+.purchase-ticket-advanced-info-grid {
+  padding: 10px 0 0 20px;  
+  display: grid;
+  grid-template-columns: 209px 195px auto;
+  .purchase-ticket-advanced-info-element {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    .purchase-ticket-advanced-info-label {
+      white-space: nowrap;
+      font-size: 13px;
+      text-align: right;
+      width: 82px;
+    }
+
+    .input-and-unit.stakepool-advanced-big-input {
+      width: 290px;
+    }
+
+    .stakepool-info-icon {
+      width: 16px;
+      height: 16px;
+      margin: 0;
+      padding: 0;
+    }
+
+    &.stake-pools .stakepool-info-icon
+    {
+      .manage-pools-button;
+      width: 20px;
+      height: 20px;
+      background-position: 4px 4px;
+      background-size: 12px;
+      padding: 0;
+    }
+    &.ticket-fee {
+      grid-column-end: 1;
+      .stakepool-info-icon {
+        background-image: var(--split-fee-icon);
+      }
+    }
+    &.tx-fee {
+      grid-column-start: 2;
+      grid-column-end: 2;
+      justify-content: flex-end;
+      .purchase-ticket-advanced-info-label {
+        width: initial;
+      }
+      .stakepool-info-icon {
+        background-image: var(--split-fee-icon);
+      }       
+    }          
+    &.expiry {
+      grid-column-start: 3;
+      grid-column-end: 3;
+      .stakepool-info-icon {
+        background-image: var(--expiry-icon);
+      }
+    } 
+    &.ticket-address .stakepool-info-icon {
+      background-image: var(--ticket-address-icon);
+    }   
+    &.pool-address .stakepool-info-icon {
+      background-image: var(--fee-address-icon);
+    }       
+    &.pool-fees .stakepool-info-icon {
+      background-image: var(--pool-fee-icon);
+    }           
+  }
+}
+
 @media screen and (max-width: 1179px) {
 
+  .purchase-ticket-advanced-info-grid {
+    .purchase-ticket-advanced-info-element {
+      &.expiry {
+        grid-column-start: 1;
+        grid-column-end: 4;
+      } 
+    }
+  }
+  
   .purchase-ticket-area {
     width: 667px;
   }
@@ -353,28 +450,29 @@
 }
 
 @media screen and (max-width: 768px) {
+
+ .purchase-ticket-advanced-info-grid {
+    .purchase-ticket-advanced-info-element {
+      .input-and-unit.stakepool-advanced-big-input {
+        width: 145px;
+      }      
+      &.ticket-fee {
+        grid-column-start: 1;
+        grid-column-end: 4;
+      }
+      &.tx-fee {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        justify-content: flex-start;
+        .purchase-ticket-advanced-info-label {
+          width: 82px;
+        }
+      } 
+    }
+  }
+
   .stake-info-details-row {
     flex-direction: column !important;
-  }
-
-  .inputs-row-label {
-    margin-bottom: 115px;
-  }
-
-  .purchase-ticket-advanced-inputs {
-    width: 150px;
-
-    .inputs-row {
-      flex-direction: column;
-
-      .is-row {
-        margin-left: -50px;
-
-        .stakepool-purchase-ticket-label {
-          margin-right: 10px;
-        }
-      }
-    }
   }
 
   .stakepool-advanced-big-input {
@@ -385,14 +483,16 @@
     width: 355px;
   }
 
-  .stakepool-info-icon {
-    margin: 0 10px 5px 0;
-  }
-
   .stakepool-purchase-ticket-quick-bar {
     grid-template-columns: 103px 106px auto;
     height: initial;
     .tooltipContainer {
+      &.ticket_expiry,
+      &.ticket_tx_fee,
+      &.ticket_fee {
+        grid-column-start: initial;
+        grid-row-start: initial;
+      }
       &.current_vsp {
         grid-column-start: 1;
       }
@@ -434,12 +534,15 @@
 
   .stakepool-purchase-ticket-input-select {
     width: 242px;
-    margin-right: 0;
     margin-left: 10px;
   }
 
   .purchase-ticket-area-row-label {
     font-size: 13px;
+    &:nth-of-type(1n){
+      width: inherit;
+      text-align: left;
+    }        
   }
 
   .purchase-ticket-input-amount {
@@ -455,7 +558,7 @@
     text-align: start
   }
 
-  .num-tickets-icon.more {
+  .num-tickets-icon.less {
     margin-left: auto;
   }
 }
